2000-06-19  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_refresh_all): fix the bug in which the toolbars will
	no get loaded when the mdi_mode is changed.

2000-06-18  Chema Celorio  <chema@celorio.com>

	* undo.c (gedit_undo_check_size): fix the bug that messed the undo stack when reducing
	the number of undo levels in the prefs. We need to remove elements from the bottom
	up, since the list length is changed every time we removed an element from the top.

	* document.c (gedit_document_swap_hc_cb): kill bug

	* view.c (gedit_view_load_toolbar_widgets): unshade/shade the undo&redo menu items
	too
	(gedit_view_set_undo): ditto

2000-06-18  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_toolbar_labels): fix the problem in which the
	toolbar will not resize if the prefs are changed from text to icons.

	* document.c (gedit_document_set_title): set title to $docname $(readonly)
	for doc->readonly == TRUE.

	(doc_delete_text_cb): if start_pos == end_pos, return. This caused
	a warning to appear when the user typed CTL+K and the line length
	was null. Should we enable this kind of shortcuts ? I don't think
	so.

2000-06-18  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_init): dont create vpane, since the split screen
	is disabled now.

	* window.c (gedit_window_set_toolbar_labels): finish preference toolbar
	labels set to system-wide setting.

	* view.c (gedit_view_changed_cb): install menu hints for the Document
	menus

2000-06-18  Chema Celorio  <chema@celorio.com>

	* view.c: the toolbar is a view element not a window one
	because if mdi_mode = TOPLEVEL, each view has it's own toolbar
	* window.c: ditto
	* document.c: ditto

2000-06-17  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-prefs.c: add toobar_labels group

	* prefs.c (gedit_prefs_save_settings): toolbar_labels, change to int
	(gedit_prefs_determine_use_fontset): ditto

	* window.c (gedit_window_new): fix the problems with mdi_mode = TOPLEVEL
