@@ -270,6 +270,23 @@
 	  <fill>True</fill>
 	</child>
       </widget>
+
+      <widget>
+	<class>GtkLabel</class>
+	<name>sendmail_label</name>
+	<label>Sendmail found at : </label>
+	<justify>GTK_JUSTIFY_CENTER</justify>
+	<wrap>False</wrap>
+	<xalign>0.5</xalign>
+	<yalign>0.5</yalign>
+	<xpad>0</xpad>
+	<ypad>0</ypad>
+	<child>
+	  <padding>0</padding>
+	  <expand>False</expand>
+	  <fill>False</fill>
+	</child>
+      </widget>
     </widget>
   </widget>
 </widget>
