@@ -21,7 +21,7 @@
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_NONE</position>
   <modal>False</modal>
-  <default_width>300</default_width>
+  <default_width>450</default_width>
   <default_height>150</default_height>
   <allow_shrink>False</allow_shrink>
   <allow_grow>True</allow_grow>
@@ -119,7 +119,10 @@
 	  <class>GtkEntry</class>
 	  <child_name>GnomeEntry:entry</child_name>
 	  <name>combo-entry1</name>
+	  <can_default>True</can_default>
+	  <has_default>True</has_default>
 	  <can_focus>True</can_focus>
+	  <has_focus>True</has_focus>
 	  <editable>True</editable>
 	  <text_visible>True</text_visible>
 	  <text_max_length>0</text_max_length>
